# Bitwarden-desktop-autofill

./: .gitignore  Cargo.toml  README.md  app.manifest  build.rs
installer/: bitwarden-desktop-autofill.iss
src/: config.rs  credentials_store.rs  error.rs  input_injector.rs  lib.rs  main.rs  native_ui.rs  tray.rs  ui_automation.rs
src/bitwarden/: auth.rs  client.rs  crypto.rs  mod.rs  types.rs  vault.rs
